RESOLVED FIXED 211798
[WinCairo][WK1] requestAnimationFrame doesn't work since r244182 in Accelerated Compositing mode
https://bugs.webkit.org/show_bug.cgi?id=211798
Summary [WinCairo][WK1] requestAnimationFrame doesn't work since r244182 in Accelerat...
Fujii Hironori
Reported 2020-05-12 13:04:15 PDT
[WinCairo] requestAnimationFrame doesn't work since r244182 in Accelerated Compositing mode Gardened in r244231 and r244250.
Attachments
Patch (5.83 KB, patch)
2020-05-12 13:20 PDT, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2020-05-12 13:20:09 PDT
Fujii Hironori
Comment 2 2020-05-12 13:48:23 PDT
Comment on attachment 399161 [details] Patch Clearing flags on attachment: 399161 Committed r261577: <https://trac.webkit.org/changeset/261577>
Fujii Hironori
Comment 3 2020-05-12 13:48:26 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2020-05-12 13:49:19 PDT
Note You need to log in before you can comment on or make changes to this bug.