[WinCairo][WK1] requestAnimationFrame doesn't work since r244182 in Accelerated Compositing mode https://bugs.webkit.org/show_bug.cgi?id=211798

Reviewed by Don Olmstead.

Source/WebKitLegacy/win:

Page::updateRendering() should be called for every frames instead
of FrameView::updateLayoutAndStyleIfNeededRecursive for rAF after
r244182.

WinCairo doesn't destory m_acceleratedCompositingContext after it
was created. WebView::flushPendingGraphicsLayerChangesSoon should
check if accelerated compositing mode is enabled by using
isAcceleratedCompositing() not by null check of
m_acceleratedCompositingContext.

* WebCoreSupport/AcceleratedCompositingContext.cpp:
(AcceleratedCompositingContext::flushAndRenderLayers): Call Page::updateRendering() instead of updateLayoutAndStyleIfNeededRecursive.
* WebView.cpp:
(WebView::flushPendingGraphicsLayerChangesSoon): Check isAcceleratedCompositing().

LayoutTests:

* platform/wincairo-wk1/TestExpectations: Unmarked tests broken by r244182.

Canonical link: https://commits.webkit.org/224691@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261577 268f45cc-cd09-0410-ab3c-d52691b4dbfc